Ep 02 - Part 1 - (5 of 7) Implementing cart layer

--- a/ep02/index.html
+++ b/ep02/index.html
@@ -18,7 +18,7 @@
         </h1>
         <button
           type="button"
-          class="text-green-900 px-2 py-2 hover:bg-green-200 rounded-lg"
+          class="btn-cart text-green-900 px-2 py-2 hover:bg-green-200 rounded-lg"
         >
           <span> Cart</span>
           <span class="total-count text-xs"></span>
@@ -30,13 +30,13 @@
       ></div>
       <div class="hidden cart-layer fixed inset-0">
         <div
-          class="fixed left-0 top-0 bottom-0 w-1/2 bg-black opacity-30"
+          class="cart-dimmed-bg fixed left-0 top-0 bottom-0 w-1/2 bg-black opacity-30"
         ></div>
         <div class="fixed right-0 top-0 bottom-0 w-1/2 bg-white py-2 px-4">
           <div class="flex justify-end">
             <button
               type="button"
-              class="text-green-800 hover:bg-green-100 rounded-lg py-2 px-4"
+              class="btn-close-cart text-green-800 hover:bg-green-100 rounded-lg py-2 px-4"
             >
               Close
             </button>
