--- a/ep02/index.html
+++ b/ep02/index.html
@@ -30,9 +30,9 @@
       ></div>
       <div class="hidden cart-layer fixed inset-0">
         <div
-          class="cart-dimmed-bg fixed left-0 top-0 bottom-0 w-1/2 bg-black opacity-30"
+          class="cart-dimmed-bg fixed left-0 top-0 bottom-0 w-full bg-black opacity-30"
         ></div>
-        <div class="fixed right-0 top-0 bottom-0 w-1/2 bg-white py-2 px-4">
+        <div class="cart-bg fixed right-0 top-0 bottom-0 w-2/3 sm:w-1/2 bg-white py-2 px-4">
           <div class="flex justify-end">
             <button
               type="button"
